# libcloudphxx

./: .travis.yml  API.md  CMakeLists.txt  COPYING  CREDITS  Doxyfile  README  README.md  Readme.md  TODO  USER_OPTIONS.md  libcloudph++-config.cmake  libcloudph++-config.cmake.in
bindings/python/: CMakeLists.txt  blk_1m.hpp  blk_2m.hpp  common.hpp  error.hpp  lgrngn.hpp  lib.cpp  util.hpp
libcloudph++/common/prtcls/: CMakeLists.txt  particles.cpp  particles.hpp  particles.ipp  particles.tpp  particles_cpp.cpp  particles_cuda.cu  particles_init.ipp  particles_lib.cpp  particles_omp.cpp  particles_openmp.cpp  particles_pimpl_ctor.ipp
models/kinematic_2D/: CMakeLists.txt
models/kinematic_2D/src/: CMakeLists.txt  icicle.cpp  kin_cloud_2d_blk_1m.hpp  kin_cloud_2d_common.hpp  kin_cloud_2d_lgrngn.hpp  kin_cloud_2d_lgrngn_chem.hpp  opts_blk_1m.hpp  opts_blk_2m.hpp  opts_common.hpp  opts_lgrngn.hpp  panic.hpp
models/kinematic_2D/tests/: CMakeLists.txt
src/: CMakeLists.txt  kernel_definitions.ipp  kernel_impl.ipp  lib.cpp  lib.cu  lib.hpp  lib_cpp.cpp  lib_cuda.cu  lib_multicuda.cu  lib_omp.cpp  particles.cpp  particles.tpp  particles_cpp.cpp  particles_ctor.ipp  particles_cuda.cu  particles_diag.ipp  particles_impl_activate.ipp  particles_impl_adve.ipp  particles_impl_bcnd.ipp  particles_impl_chem.ipp  particles_impl_chem_ante.ipp  particles_impl_chem_dissoc.ipp  particles_impl_chem_henry.ipp  particles_impl_chem_react.ipp  particles_impl_chem_strength.ipp  particles_impl_chem_vol.ipp  particles_impl_coal.ipp  particles_impl_cond.ipp  particles_impl_cond_common.ipp  particles_impl_cond_sstp.ipp  particles_impl_dist_analysis.ipp  particles_impl_distmem_access.ipp  particles_impl_fill_outbuf.ipp  particles_impl_hskpng.ipp  particles_impl_hskpng_Tpr.ipp  particles_impl_hskpng_count.ipp  particles_impl_hskpng_ijk.ipp  particles_impl_hskpng_remove.ipp  particles_impl_hskpng_resize.ipp  particles_impl_hskpng_sort.ipp  (+66 more)
src/detail/: SD_status.hpp  bcond.hpp  checknan.hpp  config.hpp  debug.hpp  distmem_opts.hpp  eval_and_oper.hpp  formatter.cpp  functors_device.hpp  functors_host.hpp  get_mpi_type.hpp  gpu_assert.hpp  grid_refinement_helpers.hpp  kernel_interpolation.hpp  kernel_onishi_nograv.hpp  kernel_utils.hpp  kernels.hpp  mpi_check.hpp  mpi_init.hpp  multiGPU_utils.hpp  multi_gpu_utils.hpp  negtozero.hpp  opts_init_sanity_checks.hpp  ran_with_mpi.hpp  remote_boundary.hpp  sd_status.hpp  synth_turb_periodic_box.hpp  thrust.hpp  tmp_vector_pool.hpp  tpl_calc_wrapper.hpp  urand.hpp  wang_collision_enhancement.hpp
src/detail/kernel_definitions/: hall_davis_no_waals_efficiencies.hpp  hall_davis_no_waals_efficiencies_like_in_EFM.hpp  hall_efficiencies.hpp  hall_efficiencies_like_in_EFM.hpp  hall_pinsky_1000mb_grav_efficiencies.hpp
src/detail/kernel_definitions_Jon/: hall_pinsky_1000mb_grav_efficiencies.hpp  hall_pinsky_cumulonimbus_efficiencies.hpp  hall_pinsky_stratocumulus_efficiencies.hpp  vohl_davis_no_waals_efficiencies.hpp
src/impl/: .particles_impl_coal.ipp.swp  particles_impl.ipp  particles_impl_adjust_timesteps.ipp  particles_impl_adve.ipp  particles_impl_ante_adding_SD.ipp  particles_impl_bcnd.ipp  particles_impl_chem_ante.ipp  particles_impl_chem_dissoc.ipp  particles_impl_chem_henry.ipp  particles_impl_chem_react.ipp  particles_impl_chem_strength.ipp  particles_impl_coal.ipp  particles_impl_cond.ipp  particles_impl_cond_common.ipp  particles_impl_cond_sstp.ipp  particles_impl_dist_analysis.ipp  particles_impl_dist_analysis_add_for_const_multi.ipp  particles_impl_distmem_access.ipp  particles_impl_fill_outbuf.ipp  particles_impl_hskpng_Tpr.ipp  particles_impl_hskpng_count.ipp  particles_impl_hskpng_ijk.ipp  particles_impl_hskpng_mfp.ipp  particles_impl_hskpng_remove.ipp  particles_impl_hskpng_resize.ipp  particles_impl_hskpng_sgs_vel.ipp  particles_impl_hskpng_sgs_vel_GA17.ipp  particles_impl_hskpng_sgs_vel_ST_periodic.ipp  particles_impl_hskpng_sort.ipp  particles_impl_hskpng_tke.ipp  particles_impl_hskpng_turb_ss.ipp  particles_impl_hskpng_turb_vel.ipp  particles_impl_hskpng_vterm.ipp  particles_impl_ice_dep.ipp  particles_impl_ice_melt.ipp  particles_impl_ice_nucl.ipp  particles_impl_ice_nucl_melt.ipp  particles_impl_init_SD_with_distros.ipp  particles_impl_init_SD_with_distros_const_multi.ipp  particles_impl_init_SD_with_distros_sd_conc.ipp  (+54 more)
src/impl/advection/: particles_impl_adve.ipp
src/impl/boundary_conditions/: particles_impl_bcnd.ipp
src/impl/chemistry/: particles_impl_chem_dissoc.ipp  particles_impl_chem_henry.ipp  particles_impl_sstp_chem.ipp
src/impl/coalescence/: particles_impl_coal.ipp
src/impl/common/: calc_liq_ice_content_change.ipp  particles_impl_rw_mom3_post_change.ipp  particles_impl_update_th_rv.ipp  save_liq_ice_content_before_change.ipp
src/impl/condensation/: particles_impl_cond.ipp  particles_impl_sstp.ipp
src/impl/diagnose_SD_attributes/: particles_impl_fill_outbuf.ipp  particles_impl_mass_dens.ipp  particles_impl_moms.ipp  (+1 more)
src/impl_multi_gpu/: particles_multi_gpu_impl.ipp  particles_multi_gpu_impl_step_async_and_copy.ipp
tests/: CMakeLists.txt
tests/2D_cloud/: CMakeLists.txt
tests/bisect/: CMakeLists.txt  test_bisect.cpp
tests/blk2m_hello_world/: CMakeLists.txt  blk2m_hello_world.cpp
tests/chem_sandbox/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_common_pvs.cpp
tests/fake_units/: CMakeLists.txt  test_fake_units.cpp
tests/mpi/: CMakeLists.txt  mpi_adve_test.cpp
tests/paper_GMD_2015/: CMakeLists.txt
tests/particles/: CMakeLists.txt  particles_cpp.cpp  particles_cuda.cu  particles_openmp.cpp  test_particles.cpp  tests_particles.cpp
tests/python/: CMakeLists.txt  README.md  analytic_blk_1m_pytest.py  api_blk_1m.py  api_blk_2m.py  api_common.py  api_lgrngn.py  blk_1m_eqs_pytest.py  blk_1m_pytest.py  coalescence_golovin.py  constants_pytest.py  lib.cpp  libcloudphxx_blk_1m_pytest.py  pytest_hello.py  segfault_20150216.py  test.py  test_col_kernels.py  test_lgrngn_adve.py  unit_lgrngn_adve.py
tests/toms748/: CMakeLists.txt  test_toms748.cpp
tests/zip/: CMakeLists.txt  test_zip.cpp
(+484 files in other folders)
